add configs/ configuration

--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -1,178 +1,33 @@
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/hyprland.conf
-# ===================================================================
-# ╭──────────────────────────────────────────────────╮
-# │  Hyprland Configuration Entry Point              │
-# │                                                  │
-# │  Maintained by @liyankova                        │
-# ╰──────────────────────────────────────────────────╯
+# ╭────────────────────────────────────────────╮
+##│           __    _                          │ 
+# │          / /   (_)_  ______ _____          │
+# │         / /   / / / / / __ `/ __ \         │
+# │        / /___/ / /_/ / /_/ / / / /         │
+# │       /_____/_/\__, /\__,_/_/ /_/          │ 
+# │               /____/                       │                                          │
+# ╰────────────────────────────────────────────╯
+#  ────────────────────────────────────────────
+#      ===   Maintained by @liyankova   ===
+
+# -----------------------------------------------------
+# [1] Source Monitor Configuration
+# -----------------------------------------------------
 source = ~/.config/hypr/monitors.conf
+
+# -----------------------------------------------------
+# [2] Global Variables
+# -----------------------------------------------------
 $mainMod = SUPER
 $scriptsDir = $HOME/.config/hypr/scripts
-source = ~/.config/hypr/conf/env.conf
-source = ~/.config/hypr/conf/user_defaults.conf
-source = ~/.config/hypr/conf/settings.conf
-source = ~/.config/hypr/conf/autostart.conf
-source = ~/.config/hypr/conf/keybinds.conf
-source = ~/.config/hypr/conf/windowrules.conf
+# $Touchpad_Device = syna328b:00-06cb:cd50-touchpad
+
+# -----------------------------------------------------
+# [3] Source Core Configuration Files
+# -----------------------------------------------------
+source = ~/.config/hypr/configs/env.conf
+source = ~/.config/hypr/configs/user_defaults.conf
+source = ~/.config/hypr/configs/settings.conf
+source = ~/.config/hypr/configs/autostart.conf
+source = ~/.config/hypr/configs/keybinds.conf
+source = ~/.config/hypr/configs/windowrules.conf
 source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/monitors.conf
-# ===================================================================
-monitor=eDP-1,1920x1080@60,0x0,1.0
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/hypridle.conf
-# ===================================================================
-general {
-    lock_cmd = pidof hyprlock || hyprlock
-    before_sleep_cmd = loginctl lock-session
-    after_sleep_cmd = hyprctl dispatch dpms on
-    ignore_dbus_inhibit = false
-}
-listener {
-    timeout = 540 # 9 min
-    on-timeout = notify-send "You are idle!"
-    on-resume = notify-send "Oh! you're Back!"
-}
-listener {
-    timeout = 600 # 10 min
-    on-timeout = loginctl lock-session
-}
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/conf/user_defaults.conf
-# ===================================================================
-$term = kitty
-$files = thunar
-$edit = ${EDITOR:-nano}
-$Search_Engine = "https://www.google.com/search?q={}"
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/conf/env.conf
-# ===================================================================
-env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = MOZ_ENABLE_WAYLAND,1
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/conf/settings.conf
-# ===================================================================
-general {
-    layout = dwindle
-    gaps_in = 2
-    gaps_out = 4
-    border_size = 2
-    col.active_border = $color12
-    col.inactive_border = $color10
-}
-decoration {
-    rounding = 10
-    blur {
-        enabled = true
-        size = 6
-        passes = 2
-        new_optimizations = true
-    }
-}
-input {
-    kb_layout = us
-    numlock_by_default = true
-    follow_mouse = 1
-    touchpad {
-        disable_while_typing = true
-        natural_scroll = true
-    }
-}
-gestures {
-    workspace_swipe = true
-}
-misc {
-    disable_hyprland_logo = true
-}
-xwayland {
-    force_zero_scaling = true
-}
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/conf/autostart.conf
-# ===================================================================
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = $scriptsDir/Polkit.sh
-exec-once = swww-daemon --format xrgb
-exec-once = hypridle
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
-exec-once = waybar
-exec-once = swaync
-exec-once = nm-applet --indicator
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/conf/keybinds.conf
-# ===================================================================
-# [Core Applications]
-bind = $mainMod, Return, exec, $term
-bind = $mainMod, Q, killactive,
-bind = $mainMod, E, exec, $files
-bind = $mainMod, D, exec, pkill rofi || rofi -show drun
-# [Window Management]
-bind = $mainMod, F, fullscreen
-bind = $mainMod, SPACE, togglefloating,
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, down, movewindow, d
-# [Workspace Management]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-# ... (add movetoworkspace for 2-0)
-# [Hardware Keys]
-binde=, XF86AudioRaiseVolume, exec, $scriptsDir/Volume.sh --inc
-binde=, XF86AudioLowerVolume, exec, $scriptsDir/Volume.sh --dec
-bind=, XF86AudioMute, exec, $scriptsDir/Volume.sh --toggle
-binde=, XF86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc
-binde=, XF86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec
-bind=, XF86TouchpadToggle, exec, $scriptsDir/TouchPad.sh
-# [Scripts & Features]
-bind = $mainMod SHIFT, Return, exec, $scriptsDir/dropTerminal.sh $term
-bind = , Print, exec, $scriptsDir/ScreenShot.sh --now
-bind = $mainMod, X, exec, $scriptsDir/Wlogout.sh
-# [Theme Presets]
-bind = $mainMod ALT, 1, exec, $scriptsDir/setWallpaper.sh 1
-bind = $mainMod ALT, 2, exec, $scriptsDir/setWallpaper.sh 2
-bind = $mainMod ALT, 3, exec, $scriptsDir/setWallpaper.sh 3
-bind = $mainMod ALT, 4, exec, $scriptsDir/setWallpaper.sh 4
-bind = $mainMod ALT, 5, exec, $scriptsDir/setWallpaper.sh 5
-bind = $mainMod ALT, 6, exec, $scriptsDir/setWallpaper.sh 6
-
-
-# ===================================================================
-# File: ~/dotfiles/hypr/.config/hypr/conf/windowrules.conf
-# ===================================================================
-windowrule = tag +browser, class:^([Ff]irefox)$
-windowrule = tag +terminal, class:^(kitty)$
-windowrule = workspace 2, tag:browser*
-windowrule = float, title:^(Open File)$
-windowrule = float, title:^(Save As)$
-layerrule = blur, rofi
-layerrule = ignorezero, rofi
