add volume and brightness scripts

--- a/dots/.config/hypr/configs/keybinds.conf
+++ b/dots/.config/hypr/configs/keybinds.conf
@@ -14,7 +14,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $files
 bind = $mainMod, D, exec, pkill rofi || rofi -show drun
 bind = $mainMod, B, exec, xdg-open "https://"
-
+bind = $mainMod SHIFT, Return, exec, $scriptsDir/Dropterminal.sh $term
 # -----------------------------------------------------
 # [Window Management]
 # -----------------------------------------------------
@@ -72,7 +72,12 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-
+bind = $mainMod ALT, 1, exec, $scriptsDir/setWallpaper.sh 1
+bind = $mainMod ALT, 2, exec, $scriptsDir/setWallpaper.sh 2
+bind = $mainMod ALT, 3, exec, $scriptsDir/setWallpaper.sh 3
+bind = $mainMod ALT, 4, exec, $scriptsDir/setWallpaper.sh 4
+bind = $mainMod ALT, 5, exec, $scriptsDir/setWallpaper.sh 5
+bind = $mainMod ALT, 6, exec, $scriptsDir/setWallpaper.sh 6
 # -----------------------------------------------------
 # [Hardware Keys] (Audio & Brightness)
 # -----------------------------------------------------
@@ -85,7 +90,11 @@ binde=, XF86KbdBrightnessUp, exec, $scriptsDir/BrightnessKbd.sh --inc
 binde=, XF86KbdBrightnessDown, exec, $scriptsDir/BrightnessKbd.sh --dec
 bind=, XF86TouchpadToggle, exec, $scriptsDir/TouchPad.sh
 
-
+bind= $mainMod, X, exec, $scriptsDir/volume.sh --inc
+bind= $mainMod, Z, exec, $scriptsDir/volume.sh --dec
+bind= $mainMod, F10, exec, $scriptsDir/volume.sh --toggle
+bind= $mainMod SHIFT, X, exec, $scriptsDir/brightness.sh --inc
+bind= $mainMod SHIFT, Z, exec, $scriptsDir/brightness.sh --dec
 # -----------------------------------------------------
 # [Scripts & Features]
 # -----------------------------------------------------
