--- a/dots/.config/hypr/configs/settings.conf
+++ b/dots/.config/hypr/configs/settings.conf
@@ -5,7 +5,7 @@
 # ╰──────────────────────────────────────────────────╯
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for a complete list
-
+source = ~/.config/hypr/configs/wallust-hyprland.conf
 # -----------------------------------------------------
 # [Layout]
 # -----------------------------------------------------
@@ -63,18 +63,23 @@ input {
         disable_while_typing = true
         natural_scroll = true
     }
-    device {
-        name = $Touchpad_Device
-        enabled = true
-    }
+
 }
 
 # -----------------------------------------------------
 # [Gestures]
 # -----------------------------------------------------
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+  gesture = 3, horizontal, workspace  
+  gesture = 3, down, mod: SUPER, close 
+  gesture = 4, horizontal, resize 
+  gesture = 4, vertical, resize 
+  workspace_swipe_distance = 500
+  workspace_swipe_invert = true
+  workspace_swipe_min_speed_to_force = 30
+  workspace_swipe_cancel_ratio = 0.5
+  workspace_swipe_create_new = true 
+  workspace_swipe_forever = true
 }
 
 # -----------------------------------------------------
