--- a/dots/.config/hypr/configs/windowrules.conf
+++ b/dots/.config/hypr/configs/windowrules.conf
@@ -43,6 +43,14 @@ windowrule = float, title:^(Confirm)$
 windowrule = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
 
 # -----------------------------------------------------
+# [Special Workspace Rules]
+# Rules for scratchpad/dropdown terminals
+# -----------------------------------------------------
+windowrule = nofocus, workspace:special
+windowrule = noborder, workspace:special
+windowrule = noshadow, workspace:special
+
+# -----------------------------------------------------
 # [Opacity & Blur Rules]
 # -----------------------------------------------------
 windowrule = opacity 0.8 0.7, tag:terminal*
