--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -30,4 +30,4 @@ source = ~/.config/hypr/configs/settings.conf
 source = ~/.config/hypr/configs/autostart.conf
 source = ~/.config/hypr/configs/keybinds.conf
 source = ~/.config/hypr/configs/windowrules.conf
-source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
+source = ~/.config/hypr/configs/wallust-hyprland.conf
