add quickshell and comment the waybar

--- a/dots/.config/hypr/configs/autostart.conf
+++ b/dots/.config/hypr/configs/autostart.conf
@@ -12,6 +12,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $scriptsDir/Polkit.sh
 exec-once = swww-daemon --format xrgb
+exec-once = /usr/bin/pypr
 exec-once = hypridle
 
 # -----------------------------------------------------
@@ -23,10 +24,10 @@ exec-once = wl-paste --type image --watch cliphist store
 # -----------------------------------------------------
 # [UI Components & Tray Applications]
 # -----------------------------------------------------
-exec-once = waybar
+# exec-once = waybar
 exec-once = swaync
 exec-once = nm-applet --indicator
-
+exec-once = quickshell --config ~/.config/quickshell
 # -----------------------------------------------------
 # [Optional Applications]
 # Uncomment the lines below to enable them.
