--- a/dots/.config/hypr/configs/keybinds.conf
+++ b/dots/.config/hypr/configs/keybinds.conf
@@ -114,3 +114,32 @@ bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Toggle Animations
 bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh
 bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh
 bind = $mainMod, W, exec, $scriptsDir/WallpaperSelect.sh # Or WallustSwww.sh
+
+
+# bind = $mainMod SHIFT, U, togglespecialworkspace, special
+# bind = $mainMod, U, exec, pypr toggle_special special
+#
+# bind = SUPER ALT, G, exec, /usr/bin/pypr toggle term && hyprctl dispatch bringactivetotop # Toggle show/hide Spotify scratchpad
+# bind = SUPER ALT SHIFT, G, exec, /usr/bin/pypr toggle gemini && hyprctl dispatch bringactivetotop  # Optional: Attach focused ke Spotify (toggle attach/unattach)
+# bind = SUPER CTRL, 1, exec, pypr expose
+# bind = SUPER CTRL, 2, exec, pypr toggle gemini
+#
+#
+$pypr = pypr # Define a variable for pypr commands
+
+# Scratchpads
+bind = $mainMod, GRAVE, exec, $pypr toggle term      # Toggle dropdown terminal (GRAVE is the `~` key)
+bind = $mainMod, V, exec, $pypr toggle volume     # Toggle volume control (pavucontrol)
+bind = $mainMod SHIFT, E, exec, $pypr toggle files      # Toggle file manager (thunar)
+
+# Expose
+bind = $mainMod, TAB, exec, $pypr expose            # Show all windows on current workspace
+
+# Other utilities
+bind = $mainMod, O, exec, $pypr fetch_client_menu # "Other" windows menu to bring a window here
+bind = $mainMod SHIFT, M, exec, $pypr magnify         # Toggle magnifier/zoom
+bind = $mainMod SHIFT, L, exec, $pypr lost_windows    # Bring back lost floating windows
+
+# Toggle a window to/from a special workspace (scratchpad alternative)
+# Example: Press Super+S on a window to hide it, press Super+S again to bring it back.
+bind = $mainMod, S, exec, $pypr toggle_special
