--- a/dots/.config/hypr/configs/settings.conf
+++ b/dots/.config/hypr/configs/settings.conf
@@ -5,7 +5,7 @@
 # ╰──────────────────────────────────────────────────╯
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for a complete list
-source = ~/.config/hypr/configs/wallust-hyprland.conf
+source = $HOME/.config/hypr/configs/wallust-hyprland.conf
 # -----------------------------------------------------
 # [Layout]
 # -----------------------------------------------------
@@ -23,11 +23,11 @@ master {
 general {
     layout = dwindle
     resize_on_border = true
-    gaps_in = 2
-    gaps_out = 4
-    border_size = 2
-    col.active_border = $color12
-    col.inactive_border = $color10
+    gaps_in = 3
+    gaps_out = 5
+    border_size = 3
+    col.active_border = $color1 $color6 $color3 $color4 $color2 $color6
+    col.inactive_border = $color1 $color9
 }
 
 # -----------------------------------------------------
@@ -35,19 +35,25 @@ general {
 # -----------------------------------------------------
 decoration {
     rounding = 10
-    active_opacity = 1.0
-    inactive_opacity = 0.9
+    active_opacity = 0.95
+    inactive_opacity = 0.8
+    fullscreen_opacity = 1.0
+
+    dim_inactive = true
+    dim_strength = 0.1
+    dim_special = 0.8
     blur {
         enabled = true
-        size = 6
+        size = 1
         passes = 2
         new_optimizations = true
     }
     shadow {
         enabled = true
-        range = 3
-        render_power = 1
-        color = $color12
+        range = 2
+        render_power = 3
+        color = $color10
+        color_inactive = $color8
     }
 }
 
@@ -70,13 +76,21 @@ input {
 # [Gestures]
 # -----------------------------------------------------
 gestures {
-  gesture = 3, horizontal, workspace  
-  gesture = 3, down, mod: SUPER, close 
-  gesture = 4, horizontal, resize 
-  gesture = 4, vertical, resize 
+  gesture = 3, swipe, mod: ALT, move
+  gesture = 3, horizontal, workspace
+  # gesture = 3, up, special, togglespecialworkspace
+  # gesture = 3, down, dispatcher, special
+  # gesture = 4, down, mod: SUPER, close 
+  gesture = 3, swipe, mod: SUPER, resize
+  # gesture = 4, down, dispatcher, exec, hyprctl dispatch movetoworkspace special:dropdown
+  # gesture = 4, up, special, togglespecialworkspace, dropdown
+  # gesture = 4, horizontal, resize 
+  # gesture = 4, vertical, resize 
+  gesture = 3, up, dispatcher, exec, /usr/bin/pypr toggle term && hyprctl dispatch bringactivetotop
+  gesture = 3, down, dispatcher, exec, /usr/bin/pypr attach
   workspace_swipe_distance = 500
   workspace_swipe_invert = true
-  workspace_swipe_min_speed_to_force = 30
+  workspace_swipe_min_speed_to_force = 10
   workspace_swipe_cancel_ratio = 0.5
   workspace_swipe_create_new = true 
   workspace_swipe_forever = true
