--- a/dots/.config/hypr/configs/windowrules.conf
+++ b/dots/.config/hypr/configs/windowrules.conf
@@ -10,7 +10,7 @@
 # [Tagging]
 # Assign tags to applications to apply rules to groups of windows.
 # -----------------------------------------------------
-windowrule = tag +browser, class:^([Ff]irefox)$
+windowrule = tag +browser, class:^([Ff]irefox|[G])$
 windowrule = tag +browser, class:^([Gg]oogle-chrome)$
 windowrule = tag +terminal, class:^(kitty)$
 windowrule = tag +files, class:^([Tt]hunar)$
@@ -25,11 +25,11 @@ windowrule = tag +media, class:^(vlc|mpv)$
 # [Workspace Rules]
 # Assign applications to specific workspaces.
 # -----------------------------------------------------
-windowrule = workspace 1, tag:terminal*
-windowrule = workspace 2, tag:browser*
-windowrule = workspace 3, tag:files*
-windowrule = workspace 7, tag:im*
-windowrule = workspace 9, tag:media*
+# windowrule = workspace 1, tag:terminal*
+# windowrule = workspace 2, tag:browser*
+# windowrule = workspace 3, tag:files*
+# windowrule = workspace 7, tag:im*
+# windowrule = workspace 9, tag:media*
 
 # -----------------------------------------------------
 # [Floating Windows]
@@ -37,10 +37,11 @@ windowrule = workspace 9, tag:media*
 # -----------------------------------------------------
 windowrule = float, tag:settings*
 windowrule = float, tag:viewer*
-windowrule = float, title:^(Open File)$
-windowrule = float, title:^(Save As)$
-windowrule = float, title:^(Confirm)$
+windowrule = float, title:^(Open File|Save As|Confirm|About|Preferences)$
 windowrule = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrule = float, size <800 600, >400 300, tag:settings*
+windowrule = float, center 1, floating:1
+windowrule = float, pseudo, class:terminal-emulator
 
 # -----------------------------------------------------
 # [Special Workspace Rules]
@@ -49,13 +50,18 @@ windowrule = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrule = nofocus, workspace:special
 windowrule = noborder, workspace:special
 windowrule = noshadow, workspace:special
+windowrule = noanim, workspace:special
+windowrule = idleinhibit always, workspace:special
 
 # -----------------------------------------------------
 # [Opacity & Blur Rules]
 # -----------------------------------------------------
-windowrule = opacity 0.8 0.7, tag:terminal*
+windowrule = opacity 0.8 override 0.7 override 1.0 override, tag:terminal*
 windowrule = opacity 0.9 0.8, tag:files*
 windowrule = noblur, tag:media* # No blur for video players
+windowrule = opacity 0.6 override, tag:alpha_0.5
+windowrule = opacity 1.0 override, fullscreen:1
+windowrule = opacity 0.5, floating:1, fullscreen:0
 
 # -----------------------------------------------------
 # [Sizing & Positioning]
@@ -76,3 +82,6 @@ layerrule = ignorezero, notifications
 # [Miscellaneous Rules]
 # -----------------------------------------------------
 windowrule = idleinhibit fullscreen, fullscreen:1 # Prevent idle on fullscreen
+
+windowrule = size 25% 25%, title:^(Picture-in-Picture)$
+windowrule = pin, title:^(Picture-in-Picture)$
