add quickshell and comment the waybar

--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -31,3 +31,12 @@ source = ~/.config/hypr/configs/autostart.conf
 source = ~/.config/hypr/configs/keybinds.conf
 source = ~/.config/hypr/configs/windowrules.conf
 source = ~/.config/hypr/configs/wallust-hyprland.conf
+
+source = ~/.config/hypr/workspaces.conf
+
+$scratchpadsize = size 70% 50%
+$scratchpad = class:^(scratchpad)$
+windowrulev2 = float,$scratchpad
+windowrulev2 = $scratchpadsize,$scratchpad
+windowrulev2 = workspace special silent,$scratchpad
+windowrulev2 = center,$scratchpad
