configure new binding and gesture

--- a/dots/.config/hypr/configs/keybinds.conf
+++ b/dots/.config/hypr/configs/keybinds.conf
@@ -6,6 +6,40 @@
 
 # See https://wiki.hyprland.org/Configuring/Binds/ for more
 
+$mainMod = SUPER
+$UserScripts = $HOME/.config/hypr/scripts
+$UserConfigs = $HOME/.config/hypr/configs
+
+# settings for User defaults apps - set your default terminal and file manager on this file
+source= $UserConfigs/user_defaults.conf
+
+
+exec = hyprctl dispatch submap global
+submap = global
+
+bindi = $mainMod, Super_L, global, caelestia:launcher
+bindin = Super, catchall, global, caelestia:launcherInterrupt
+bindin = Super, mouse:272, global, caelestia:launcherInterrupt
+bindin = Super, mouse:273, global, caelestia:launcherInterrupt
+bindin = Super, mouse:274, global, caelestia:launcherInterrupt
+bindin = Super, mouse:275, global, caelestia:launcherInterrupt
+bindin = Super, mouse:276, global, caelestia:launcherInterrupt
+bindin = Super, mouse:277, global, caelestia:launcherInterrupt
+bindin = Super, mouse_up, global, caelestia:launcherInterrupt
+bindin = Super, mouse_down, global, caelestia:launcherInterrupt
+
+bind = $mainMod ALT, DELETE, global, caelestia:session
+bind = $mainMod, K, global, caelestia:showall
+# bind = $mainMod, GRAVE, exec, caelestia toggle specialws
+bind = $mainMod ALT, Backslash, exec, caelestia resizer pip
+
+# Toggle special workspace
+bind = $mainMod, grave, exec, hyprctl dispatch togglespecialworkspace
+
+# Move active window to special workspace
+bind = $mainMod ALT, grave, exec, hyprctl dispatch movetoworkspace special
+# bind = $mainMod SHIFT, grave, exec, hyprctl dispatch togglespecialworkspace specialws
+
 # -----------------------------------------------------
 # [Core Applications]
 # -----------------------------------------------------
@@ -19,26 +53,54 @@ bind = $mainMod SHIFT, Return, exec, $scriptsDir/Dropterminal.sh $term
 # [Window Management]
 # -----------------------------------------------------
 bind = $mainMod, F, fullscreen
-bind = $mainMod, SPACE, togglefloating,
+# bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 
+# Resize windows
+binde = $mainMod SHIFT, left, resizeactive,-50 0
+binde = $mainMod SHIFT, right, resizeactive,50 0
+binde = $mainMod SHIFT, up, resizeactive,0 -50
+binde = $mainMod SHIFT, down, resizeactive,0 50
+
+# Resize windows
+binde = $mainMod SHIFT, H, resizeactive,-50 0
+binde = $mainMod SHIFT, L, resizeactive,50 0
+binde = $mainMod SHIFT, K, resizeactive,0 -50
+binde = $mainMod SHIFT, J, resizeactive,0 50
+# Move windows
+bind = $mainMod CTRL, left, movewindow, l
+bind = $mainMod CTRL, right, movewindow, r
+bind = $mainMod CTRL, up, movewindow, u
+bind = $mainMod CTRL, down, movewindow, d
+
+# Move windows
+bind = $mainMod CTRL, H, movewindow, l
+bind = $mainMod CTRL, L, movewindow, r
+bind = $mainMod CTRL, K, movewindow, u
+bind = $mainMod CTRL, J, movewindow, d
+# Swap windows
+bind = $mainMod ALT, left, swapwindow, l
+bind = $mainMod ALT, right, swapwindow, r
+bind = $mainMod ALT, up, swapwindow, u
+bind = $mainMod ALT, down, swapwindow, d
+
+# Swap windows
+bind = $mainMod ALT, H, swapwindow, l
+bind = $mainMod ALT, L, swapwindow, r
+bind = $mainMod ALT, K, swapwindow, u
+bind = $mainMod ALT, J, swapwindow, d
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Move windows with mainMod + SHIFT + arrow keys
-bind = $mainMod SHIFT, left, movewindow, l
-bind = $mainMod SHIFT, right, movewindow, r
-bind = $mainMod SHIFT, up, movewindow, u
-bind = $mainMod SHIFT, down, movewindow, d
+# Move focus with mainMod + arrow keys
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
-# Resize windows with mainMod + CTRL + arrow keys
-binde = $mainMod CTRL, right, resizeactive, 10 0
-binde = $mainMod CTRL, left, resizeactive, -10 0
-binde = $mainMod CTRL, up, resizeactive, 0 -10
-binde = $mainMod CTRL, down, resizeactive, 0 10
 
 
 # -----------------------------------------------------
@@ -68,9 +130,24 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod CTRL, code:10, movetoworkspacesilent, 1 # NOTE: code:10 = key 1
+bind = $mainMod CTRL, code:11, movetoworkspacesilent, 2 # NOTE: code:11 = key 2
+bind = $mainMod CTRL, code:12, movetoworkspacesilent, 3 # NOTE: code:12 = key 3
+bind = $mainMod CTRL, code:13, movetoworkspacesilent, 4 # NOTE: code:13 = key 4
+bind = $mainMod CTRL, code:14, movetoworkspacesilent, 5 # NOTE: code:14 = key 5
+bind = $mainMod CTRL, code:15, movetoworkspacesilent, 6 # NOTE: code:15 = key 6
+bind = $mainMod CTRL, code:16, movetoworkspacesilent, 7 # NOTE: code:16 = key 7
+bind = $mainMod CTRL, code:17, movetoworkspacesilent, 8 # NOTE: code:17 = key 8
+bind = $mainMod CTRL, code:18, movetoworkspacesilent, 9 # NOTE: code:18 = key 9
+bind = $mainMod CTRL, code:19, movetoworkspacesilent, 10 # NOTE: code:19 = key 0
+bind = $mainMod CTRL, bracketleft, movetoworkspacesilent, -1 # brackets [
+bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1 # brackets ]
+
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow # NOTE: mouse:272 = left click
+bindm = $mainMod, mouse:273, resizewindow # NOTE: mouse:272 = right click
+
 
 bind = $mainMod ALT, 1, exec, $scriptsDir/setWallpaper.sh 1
 bind = $mainMod ALT, 2, exec, $scriptsDir/setWallpaper.sh 2
@@ -128,12 +205,12 @@ bind = $mainMod, W, exec, $scriptsDir/WallpaperSelect.sh # Or WallustSwww.sh
 $pypr = pypr # Define a variable for pypr commands
 
 # Scratchpads
-bind = $mainMod, GRAVE, exec, $pypr toggle term      # Toggle dropdown terminal (GRAVE is the `~` key)
-bind = $mainMod, V, exec, $pypr toggle volume     # Toggle volume control (pavucontrol)
-bind = $mainMod SHIFT, E, exec, $pypr toggle files      # Toggle file manager (thunar)
-
-# Expose
-bind = $mainMod, TAB, exec, $pypr expose            # Show all windows on current workspace
+bind = $mainMod SHIFT, GRAVE, exec, $pypr toggle term      # Toggle dropdown terminal (GRAVE is the `~` key)
+# bind = $mainMod, V, exec, $pypr toggle volume     # Toggle volume control (pavucontrol)
+# bind = $mainMod SHIFT, E, exec, $pypr toggle files      # Toggle file manager (thunar)
+#
+# # Expose
+# bind = $mainMod, TAB, exec, $pypr expose            # Show all windows on current workspace
 
 # Other utilities
 bind = $mainMod, O, exec, $pypr fetch_client_menu # "Other" windows menu to bring a window here
@@ -142,4 +219,4 @@ bind = $mainMod SHIFT, L, exec, $pypr lost_windows    # Bring back lost floating
 
 # Toggle a window to/from a special workspace (scratchpad alternative)
 # Example: Press Super+S on a window to hide it, press Super+S again to bring it back.
-bind = $mainMod, S, exec, $pypr toggle_special
+# bind = $mainMod, S, exec, $pypr toggle_special
