--- a/dots/.config/hypr/configs/settings.conf
+++ b/dots/.config/hypr/configs/settings.conf
@@ -23,9 +23,9 @@ master {
 general {
     layout = dwindle
     resize_on_border = true
-    gaps_in = 3
-    gaps_out = 5
-    border_size = 3
+    gaps_in = 4
+    gaps_out = 7
+    border_size = 1
     col.active_border = $color1 $color6 $color3 $color4 $color2 $color6
     col.inactive_border = $color1 $color9
 }
@@ -34,7 +34,7 @@ general {
 # [Decoration]
 # -----------------------------------------------------
 decoration {
-    rounding = 10
+    rounding = 20
     active_opacity = 0.95
     inactive_opacity = 0.8
     fullscreen_opacity = 1.0
@@ -81,7 +81,19 @@ gestures {
   # gesture = 3, up, special, togglespecialworkspace
   # gesture = 3, down, dispatcher, special
   # gesture = 4, down, mod: SUPER, close 
-  gesture = 3, swipe, mod: SUPER, resize
+  gesture = 3, swipe, mod: CTRL, resize
+# 2 jari swipe + CTRL → switch tab (misalnya di browser/terminal multiplexer)
+# gesture = 2, left, mod: CTRL, exec, xdotool key ctrl+Page_Up
+# gesture = 2, right, mod: CTRL, exec, xdotool key ctrl+Page_Down
+
+# 2 jari pinch + ALT → toggle special workspace
+# gesture = 2, pinchout, mod: ALT, dispatcher, exec, caelestia toggle specialws
+gesture = 2, pinchout, mod: ALT, dispatcher, exec, hyprctl dispatch togglespecialworkspace
+gesture = 2, pinchin, mod: ALT, dispatcher, exec, hyprctl dispatch movetoworkspace special
+
+# gesture = 4, down, dispatcher, exec, /usr/bin/caelestia showall
+# gesture = 4, down, dispatcher, exec, ~/.config/quickshell/ showall
+
   # gesture = 4, down, dispatcher, exec, hyprctl dispatch movetoworkspace special:dropdown
   # gesture = 4, up, special, togglespecialworkspace, dropdown
   # gesture = 4, horizontal, resize 
