--- a/dots/.config/hypr/configs/windowrules.conf
+++ b/dots/.config/hypr/configs/windowrules.conf
@@ -40,8 +40,8 @@ windowrule = float, tag:viewer*
 windowrule = float, title:^(Open File|Save As|Confirm|About|Preferences)$
 windowrule = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrule = float, size <800 600, >400 300, tag:settings*
-windowrule = float, center 1, floating:1
-windowrule = float, pseudo, class:terminal-emulator
+# windowrule = float, center 1, floating:1
+# windowrule = float, pseudo, class:terminal-emulator
 
 # -----------------------------------------------------
 # [Special Workspace Rules]
@@ -52,16 +52,20 @@ windowrule = noborder, workspace:special
 windowrule = noshadow, workspace:special
 windowrule = noanim, workspace:special
 windowrule = idleinhibit always, workspace:special
+# windowrule= float,  workspace:special
+# windowrule= center, workspace:special
+# windowrule= size 30% 70%, workspace:special
+# windowrule = opacity 0.5, workspace:special
 
 # -----------------------------------------------------
 # [Opacity & Blur Rules]
 # -----------------------------------------------------
-windowrule = opacity 0.8 override 0.7 override 1.0 override, tag:terminal*
+windowrule = opacity 0.9 override 0.7 override 1.0 override, tag:terminal*
 windowrule = opacity 0.9 0.8, tag:files*
 windowrule = noblur, tag:media* # No blur for video players
-windowrule = opacity 0.6 override, tag:alpha_0.5
-windowrule = opacity 1.0 override, fullscreen:1
-windowrule = opacity 0.5, floating:1, fullscreen:0
+# windowrule = opacity 0.6 override, tag:alpha_0.5
+# windowrule = opacity 1.0 override, fullscreen:1
+windowrule = opacity 0.8, floating:1, fullscreen:0
 
 # -----------------------------------------------------
 # [Sizing & Positioning]
