--- a/dots/.config/hypr/scheme/current.conf
+++ b/dots/.config/hypr/scheme/current.conf
@@ -1,109 +1,109 @@
-$primary_paletteKeyColor = 7670ac
-$secondary_paletteKeyColor = 78748b
-$tertiary_paletteKeyColor = 966a7e
-$neutral_paletteKeyColor = 78767d
-$neutral_variant_paletteKeyColor = 797680
-$background = 141318
-$onBackground = e5e1e9
-$surface = 141318
-$surfaceDim = 141318
-$surfaceBright = 3a383e
-$surfaceContainerLowest = 0e0e13
-$surfaceContainerLow = 1c1b20
-$surfaceContainer = 201f25
-$surfaceContainerHigh = 2a292f
-$surfaceContainerHighest = 35343a
-$onSurface = e5e1e9
-$surfaceVariant = 47464f
-$onSurfaceVariant = c9c5d0
-$inverseSurface = e5e1e9
-$inverseOnSurface = 313036
-$outline = 928f99
-$outlineVariant = 47464f
+$primary_paletteKeyColor = 8a00fd
+$secondary_paletteKeyColor = 886e90
+$tertiary_paletteKeyColor = 966891
+$neutral_paletteKeyColor = 7c7481
+$neutral_variant_paletteKeyColor = 7d7484
+$background = 16111b
+$onBackground = e9dfee
+$surface = 16111b
+$surfaceDim = 16111b
+$surfaceBright = 3d3742
+$surfaceContainerLowest = 110c16
+$surfaceContainerLow = 1e1a24
+$surfaceContainer = 231e28
+$surfaceContainerHigh = 2d2833
+$surfaceContainerHighest = 38333e
+$onSurface = e9dfee
+$surfaceVariant = 4b4452
+$onSurfaceVariant = cdc3d4
+$inverseSurface = e9dfee
+$inverseOnSurface = 342e39
+$outline = 978d9e
+$outlineVariant = 4b4452
 $shadow = 000000
 $scrim = 000000
-$surfaceTint = c6bfff
-$primary = c6bfff
-$onPrimary = 2f295f
-$primaryContainer = 454077
-$onPrimaryContainer = e4dfff
-$inversePrimary = 5d5791
-$secondary = c8c3dc
-$onSecondary = 302e41
-$secondaryContainer = 474459
-$onSecondaryContainer = e4dff9
-$tertiary = ecb8cf
-$onTertiary = 482537
-$tertiaryContainer = b28499
+$surfaceTint = d9b9ff
+$primary = d9b9ff
+$onPrimary = 460085
+$primaryContainer = 6400ba
+$onPrimaryContainer = eedbff
+$inversePrimary = 8400f1
+$secondary = dabde2
+$onSecondary = 3d2846
+$secondaryContainer = 574160
+$onSecondaryContainer = f7d8ff
+$tertiary = ebb6e4
+$onTertiary = 482247
+$tertiaryContainer = b181ac
 $onTertiaryContainer = 000000
 $error = ffb4ab
 $onError = 690005
 $errorContainer = 93000a
 $onErrorContainer = ffdad6
-$primaryFixed = e4dfff
-$primaryFixedDim = c6bfff
-$onPrimaryFixed = 191249
-$onPrimaryFixedVariant = 454077
-$secondaryFixed = e4dff9
-$secondaryFixedDim = c8c3dc
-$onSecondaryFixed = 1b192c
-$onSecondaryFixedVariant = 474459
-$tertiaryFixed = ffd8e8
-$tertiaryFixedDim = ecb8cf
-$onTertiaryFixed = 301122
-$onTertiaryFixedVariant = 613b4e
+$primaryFixed = eedbff
+$primaryFixedDim = d9b9ff
+$onPrimaryFixed = 2a0054
+$onPrimaryFixedVariant = 6400ba
+$secondaryFixed = f7d8ff
+$secondaryFixedDim = dabde2
+$onSecondaryFixed = 271430
+$onSecondaryFixedVariant = 553f5d
+$tertiaryFixed = ffd6f7
+$tertiaryFixedDim = ebb6e4
+$onTertiaryFixed = 300c31
+$onTertiaryFixedVariant = 61385f
 $term0 = 353434
-$term1 = b56eff
+$term1 = d656ff
 $term2 = ffbac2
 $term3 = ffdcf2
-$term4 = 9ca9d8
-$term5 = b89de9
+$term4 = a7a6d8
+$term5 = c899e0
 $term6 = 9dceff
 $term7 = e8d3de
-$term8 = ac9fa9
-$term9 = c791ff
-$term10 = 89ecff
+$term8 = ad9fa8
+$term9 = e481ff
+$term10 = ffd2d5
 $term11 = fff0f6
-$term12 = b7c0dd
-$term13 = cdb4f3
+$term12 = babfdd
+$term13 = dab0eb
 $term14 = bae0ff
 $term15 = ffffff
-$rosewater = f8eff8
-$flamingo = eaddf3
-$pink = e4d7ff
-$mauve = c4b7ff
-$red = c6a4fb
-$maroon = ccb4eb
-$peach = e4c1f7
+$rosewater = faeef7
+$flamingo = efdcf0
+$pink = efd3ff
+$mauve = d4b1ff
+$red = d79ff0
+$maroon = d8b1e4
+$peach = efbeee
 $yellow = ffecf3
 $green = c8e3ff
-$teal = d5dfff
-$sky = d2d9ff
-$sapphire = bbc4ff
-$blue = b5b6ff
-$lavender = cbc7ff
-$klink = 7880d1
-$klinkSelection = 7881d1
-$kvisited = 8770d8
-$kvisitedSelection = 8770d8
-$knegative = a964fd
-$knegativeSelection = a864fd
-$kneutral = d08fff
-$kneutralSelection = d090ff
+$teal = ddddff
+$sky = dbd7ff
+$sapphire = c8c0ff
+$blue = c5b1ff
+$lavender = d7c3ff
+$klink = 8b7bce
+$klinkSelection = 8b7bce
+$kvisited = 9b6ace
+$kvisitedSelection = 9b6ace
+$knegative = c05be7
+$knegativeSelection = c05be7
+$kneutral = ee7ffc
+$kneutralSelection = ee7ffc
 $kpositive = 60adff
 $kpositiveSelection = 60adff
-$text = e5e1e9
-$subtext1 = c9c5d0
-$subtext0 = 928f99
-$overlay2 = 7f7c86
-$overlay1 = 6c6972
-$overlay0 = 5a5860
-$surface2 = 49474e
-$surface1 = 38373d
-$surface0 = 26252a
-$base = 141318
-$mantle = 141318
-$crust = 131217
+$text = e9dfee
+$subtext1 = cdc3d4
+$subtext0 = 978d9e
+$overlay2 = 847a8a
+$overlay1 = 706776
+$overlay0 = 5e5664
+$surface2 = 4d4552
+$surface1 = 3b3541
+$surface0 = 28232e
+$base = 16111b
+$mantle = 16111b
+$crust = 15101a
 $success = B5CCBA
 $onSuccess = 213528
 $successContainer = 374B3E
