--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -34,9 +34,9 @@ source = ~/.config/hypr/configs/wallust-hyprland.conf
 
 source = ~/.config/hypr/workspaces.conf
 
-$scratchpadsize = size 70% 50%
-$scratchpad = class:^(scratchpad)$
-windowrulev2 = float,$scratchpad
-windowrulev2 = $scratchpadsize,$scratchpad
-windowrulev2 = workspace special silent,$scratchpad
-windowrulev2 = center,$scratchpad
+# $scratchpadsize = size 70% 50%
+# $scratchpad = class:^(scratchpad)$
+# windowrulev2 = float,$scratchpad
+# windowrulev2 = $scratchpadsize,$scratchpad
+# windowrulev2 = workspace special silent,$scratchpad
+# windowrulev2 = center,$scratchpad
