--- a/dots/.config/hypr/workspaces.conf
+++ b/dots/.config/hypr/workspaces.conf
@@ -5,5 +5,5 @@ windowrulev2 = float, title:^(Spotify)$
 # Customize special workspaces like scratchpads.
 # Why: Makes dropdowns or special workspaces visually distinct.
 # -----------------------------------------------
-workspace = special:scratchpad, gapsin:0, gapsout:0, decorate:false, rounding:false  # Minimal scratchpad
-workspace = special:scratchpad, on-created-empty:[float] foot --class=dropdown  # Ensure floating dropdown
+# workspace = special:scratchpad, gapsin:0, gapsout:0, decorate:false, rounding:false  # Minimal scratchpad
+# workspace = special:scratchpad, on-created-empty:[float] foot --class=dropdown  # Ensure floating dropdown
